...
@Composable
fun CollectorsList(
    collectorList: List<Collector>,
    goToDetail: (id: Long) -> Unit,
    modifier: Modifier = Modifier
) {
    LazyColumn(modifier = modifier.testTag("collector_list")) {
        items(collectorList) { collector ->
            CollectorCard(collector = collector, goToDetail = goToDetail)
            Divider()
        }
    }
}
...
