...
    Box(modifier = Modifier.fillMaxSize()) {
        ExtendedFloatingActionButton(
            onClick = { addFavorite(artist.id)},
            modifier = Modifier
                .padding(all = 8.dp)
                .align(alignment = Alignment.BottomEnd)
                .testTag("favorite"),
            icon = { Icon(if(stateFavorite.isFavorite){
                Icons.Filled.FavoriteBorder
            }else{
                Icons.Filled.Favorite},
                contentDescription =
                if(stateFavorite.isFavorite){
...
